mise a jour pour la creation de l evenement
